--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-streamlit==1.25.0
-pandas>=2.0.0
+streamlit>=1.35.0
+pandas
 numpy
-sentence-transformers>=2.2.2
-transformers>=4.40.0
-torch>=2.2.0
+sentence-transformers
+transformers
+torch
 faiss-cpu
 python-dotenv
-spacy>=3.7.0
+spacy
 regex
 tqdm
-pytest==8.3.4
+pytest
 matplotlib
 seaborn
-notebook
